testdata/baselines/reference/submodule/conformance/ambientDeclarationsPatterns.errors.txt
user.ts(2,24): error TS2307: Cannot find module 'foobarbaz' or its corresponding type declarations.
user.ts(5,20): error TS2307: Cannot find module 'foosball' or its corresponding type declarations.
user.ts(9,22): error TS2307: Cannot find module './file!text' or its corresponding type declarations.


==== user.ts (3 errors) ====
    ///<reference path="declarations.d.ts" />
    import {foo, baz} from "foobarbaz";
                           ~~~~~~~~~~~
!!! error TS2307: Cannot find module 'foobarbaz' or its corresponding type declarations.
    foo(baz);
    
    import {foos} from "foosball";
                       ~~~~~~~~~~
!!! error TS2307: Cannot find module 'foosball' or its corresponding type declarations.
    foo(foos);
    
    // Works with relative file name
    import fileText from "./file!text";
                         ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './file!text' or its corresponding type declarations.
    foo(fileText);
    
==== declarations.d.ts (0 errors) ====
    declare module "foo*baz" {
        export function foo(s: string): void;
    }
    // Augmentations still work
    declare module "foo*baz" {
        export const baz: string;
    }
    
    // Longest prefix wins
    declare module "foos*" {
        export const foos: string;
    }
    
    declare module "*!text" {
        const x: string;
        export default x;
    }
    